--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dentalcareerplan-pack",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Interactive to simulate dental career planning",
   "main": "src/index.js",
   "scripts": {
@@ -45,7 +45,7 @@
   "bugs": {
     "url": "https://github.com/ccnmtl/dentalcareerplan-pack/issues"
   },
-  "license": "MIT",
+  "license": "GPL-3.0",
   "devDependencies": {
     "chai": "^3.5.0",
     "jscs": "^3.0.4",
