--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
     "url": "https://github.com/ccnmtl/dentalcareerplan-pack/issues"
   },
   "license": "GPL-3.0",
+  "greenkeeper": {
+    "ignore": [
+      "file-loader"
+    ]
+  },
   "devDependencies": {
     "chai": "^4.0.2",
     "eslint": "~4.7.0",
@@ -62,7 +67,7 @@
     "bootstrap": "^3.3.7",
     "bootstrap-arrow-buttons": "^1.0.4",
     "css-loader": "^0.28.4",
-    "file-loader": "^1.0.0",
+    "file-loader": "^0.11.2",
     "jquery": "^2.1.4",
     "json-loader": "^0.5.4",
     "style-loader": "^0.18.2",
