--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
     "url": "https://github.com/ccnmtl/dentalcareerplan-pack/issues"
   },
   "license": "GPL-3.0",
+  "greenkeeper": {
+    "ignore": [
+      "bootstrap"
+    ]
+  },
   "devDependencies": {
     "chai": "^4.0.2",
     "eslint": "~4.19.1",
@@ -55,11 +60,12 @@
     "mocha": "^5.1.1",
     "mocha-phantomjs-core": "^2.1.2",
     "phantomjs-prebuilt": "^2.1.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "^3.1.3",
+    "webpack-cli": "2.0.10"
   },
   "dependencies": {
     "backbone": "1.3.3",
-    "bootstrap": "^4.1.0",
+    "bootstrap": "^3.3.7",
     "bootstrap-arrow-buttons": "^1.0.4",
     "css-loader": "^0.28.4",
     "file-loader": "^1.1.11",
